--- a/praktikum/P6_PW_193040055/tugas/css/style.css
+++ b/praktikum/P6_PW_193040055/tugas/css/style.css
@@ -1,12 +1,8 @@
-.slider h3{
-  padding-top: 180px;
-  text-shadow: 0px 0px 50px rgba(0,0,0,1);
-  font-family: Lobster;
-}
-.slider img{
-  filter: blur(5px);
+section{
+	padding : 20px 0;
 }
 
+/* navbar */
 .nav-wrapper{
   margin-right: -150px;
   font-family: Libre Baskerville;
@@ -53,47 +49,10 @@
   height: 250px;
 }
 
-
-/*payment*/
-.parallax-container {
-	height: 30%;
-}
-
-.parallax img{
-  filter: blur(2px);
-  height: 1200px;
-}
-
-.payment h3{
-  filter: drop-shadow(2px 2px 2px rgba(26,13,0,0.8));
-  font-family: kaushan script;
-}
-
-.payment img {
-  max-width: 130px;
-  max-height: 80px;
-	filter: drop-shadow(2px 2px 2px rgba(255,217,179,0.8));
-}
-
-/*log in*/
-.login, .login .btn {
+/* footer */
+.footer-copyright h5{
   font-family: Libre Baskerville;
-}
-.login .border {
-  border: 1px dashed #ff5252;
-  border-left-style: hidden;
-  border-right-style: hidden;
-  border-bottom-style: hidden;
-  padding-top: 15px;
-  margin-top: 35px;
-}
-section{
-	padding : 20px 0;
-}
-
-footer {
-  padding: 10px 0;
-  font-family: Libre Baskerville;
+  margin-top: -5px;
 }
 
 /* detail.php */
