--- a/kuliah/pertemuan12/css/style.css
+++ b/kuliah/pertemuan12/css/style.css
@@ -35,7 +35,7 @@
   font-family: Kaushan Script;
 }
 
-/* halaman utama (latihan3.php) */
+/* halaman utama (index.php) */
 .utama h3{
   font-family: Kaushan Script;
   font-size: 50px;
@@ -46,3 +46,4 @@
   width: 1000px;
   background-color:  #f5f5f5;
 }
+
