--- a/tubes/css/style.css
+++ b/tubes/css/style.css
@@ -13,6 +13,15 @@ section{
   margin-left: -150px;
 }
 
+/* slider */
+.slider h3{
+  padding-top: 180px;
+  text-shadow: 0px 0px 50px rgba(0,0,0,1);
+  font-family: Lobster;
+}
+.slider img{
+  filter: blur(5px);
+}
 
 /*products*/
 .product h3{
