--- a/tubes/css/style.css
+++ b/tubes/css/style.css
@@ -35,9 +35,16 @@ section{
   font-family: kaushan script;
 }
 
-.product .nama{
-  color: #ff5252;
-  font-family: Lobster;
+.product h4{
+  border: 1px dashed #ff5252 ;
+  border-left-style: hidden;
+  border-right-style: hidden;
+  border-top-style: hidden ;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  margin-top: 40px;
+  margin-bottom: 50px;
+  font-family: kaushan script;
 }
 
 .product .collection-header{
@@ -47,15 +54,32 @@ section{
 
 .product .nama{
   color: #ff5252!important;
-  font-family: Lobster!important;
+  font-family: Libre Baskerville!important;
+  font-size: 18px;
+}
+
+.product .judul{
+  font-size: 35px;
 }
 
 .product .container {
-  width: 800px;
+  width: 1000px;
 }
 
-.product img{
-  height: 250px;
+.body-index .product .card-panel{
+  height: 70px;
+  padding-top: 5px;
+  background-color: #8d6e63;
+}
+
+.body-index .product .card-panel .material-icons{
+  font-size: 30px;
+  padding-top: 15px;
+}
+
+.body-index .product .card-panel input[type=text]:focus {
+  border-bottom: 1px solid #000;
+  box-shadow: 0 1px 0 0 #000;
 }
 
 /* payment */
@@ -85,13 +109,12 @@ section{
   margin-top: -5px;
 }
 
-/* detail.php */
+/* halaman detail */
 .body-detail{
-background-color: lavender;
+background-image: url(../assets/img/bg/bg2.png);
 }
 
 .detail .container {
-  
   background-color: #f5f5f5;
 }
 
@@ -111,33 +134,318 @@ background-color: lavender;
   font-size: 20px;
 }
 
-/* admin */
+.detail .card-action a{
+  color: black!important;
+  font-weight: bold;
+}
+
+/* halaman admin */
+.body-admin{
+background-image: url(../assets/img/bg/bg2.png);
+}
+
 .admin .img{
   height: 150px;
 }
 
-/* halaman tambah.php */
+.admin .tabel {
+  width: 1250px;
+  margin: 10px auto;
+}
+
+.admin .tabel button .btn{
+  color: white;
+}
+
+.admin .card-panel{
+  height: 70px;
+  padding-top: 5px;
+  background-color: #8d6e63;
+
+}
+
+
+.admin .card-panel input[type=text]:focus {
+  border-bottom: 1px solid #000;
+  box-shadow: 0 1px 0 0 #000;
+}
+
+
+/* halaman tambah*/
+.body-tambah{
+  background-image: url(../assets/img/bg/background3.jpg);
+  background-size: cover;
+}
 .tambah{
-  background-color: #f5f5f5;
-  height: 880px;
-  width: 850px;
-  padding: 25px;
-  margin: 30px;
+  position: center;
 }
 
 .tambah h3{
   font-family: Kaushan Script;
 }
 
-/* halaman ubah.php */
+.tambah .card-panel{
+  margin-top: 25px;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 5%;
+}
+
+.tambah .card-panel label{
+  color: black;
+}
+
+.tambah .card-panel .input-field input[type=text]:focus {
+  border-bottom: 1px solid #000;
+  box-shadow: 0 1px 0 0 #000;
+}
+
+/* halaman ubah*/
+.body-ubah{
+  background-image: url(../assets/img/bg/background3.jpg);
+  background-size: cover;
+}
 .ubah{
-  background-color: #f5f5f5;
-  height: 880px;
-  width: 850px;
-  padding: 25px;
-  margin: 30px;
+  position: center;
 }
 
 .ubah h3{
   font-family: Kaushan Script;
+}
+
+.ubah .card-panel{
+  margin-top: 25px;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 5%;
+}
+
+.ubah .card-panel label{
+  color: black;
+}
+
+.ubah .card-panel .input-field input[type=text]:focus {
+  border-bottom: 1px solid #000;
+  box-shadow: 0 1px 0 0 #000;
+}
+
+/* halaman login */
+.body-login {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  height: 600px;
+  background-image: url(../assets/img/bg/bg4.jpg);
+  background-size: contain;
+  align-items: center;
+}
+
+.login {
+  margin-top: 100px;
+  background-color: rgba(255, 255, 255, 0.9);
+  width: 500px;
+  text-align: center;
+  padding: 40px;
+  box-sizing: border-box;
+  border-radius: 10%;
+  font-size: 20px;
+}
+
+.login h3 {
+  margin: 0 0 20px;
+  width: 100%;
+  margin-bottom: 25px;
+  font-family: Libre Baskerville;
+  font-size: 50px;
+  color: #3e2723;
+}
+
+.login .input-group {
+  position: relative;
+  width: 100%;
+  margin-bottom: 25px;
+}
+
+.login .input-group input {
+  height: 50px;
+  width: 100%;
+  padding: 0 20px;
+  box-sizing: border-box;
+  font-size: 10px;
+  border: 3px solid #3e2723;
+  border-radius: 10px;
+}
+
+.login .input-group label {
+  position: absolute;
+  top: 12px;
+  left: 20px;
+  padding: 0px;
+  text-transform: capitalize;
+  background-color: #fff;
+  transition: 0.5s;
+  font-family: Kaushan Script;
+  font-size: 20px;
+}
+
+.login .remember label{
+  font-family: Kaushan Script;
+  font-size: 22px;
+}
+
+.login .remember input[type="checkbox"]{
+  height: 20px;
+  width: 20px;
+  box-sizing: border-box;
+}
+
+.login .input-group input{
+  font-size: 18px;
+  font-family: Libre Baskerville;
+}
+
+.login .input-group input:focus~label,
+.login .input-group input:valid~label {
+  top: -15px;
+  left: 20px;
+  font-size: 15px;
+  background-color: #bcaaa4;
+  padding: 2px 6px;
+  border: 1px solid #3e2723;
+  border-radius: 5px;
+}
+
+.login .input-group input[type="submit"] {
+  background-color: #bcaaa4;
+  border: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  cursor: pointer;
+  width: 35%;
+  transition: 0.5s;
+  font-size: 15px;
+  font-family: Libre Baskerville;
+}
+
+.login .input-group input[type="submit"]:hover {
+  width: 100%;
+  background-color: rgba(51,0,0, 0.8);
+  color: #fff;
+}
+
+.login .regis p{
+  font-family: Libre Baskerville;
+  font-size: 22px;
+}
+
+/* halaman registrasi */
+.body-registrasi {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  height: 600px;
+  background-image: url(../assets/img/bg/bg4.jpg);
+  background-size: contain;
+  align-items: center;
+}
+
+.registrasi {
+  margin-top: 100px;
+  background-color: rgba(255, 255, 255, 0.9);
+  width: 500px;
+  text-align: center;
+  padding: 40px;
+  box-sizing: border-box;
+  border-radius: 10%;
+  font-size: 20px;
+}
+
+.registrasi h3 {
+  margin: 0 0 20px;
+  width: 100%;
+  margin-bottom: 25px;
+  font-family: Libre Baskerville;
+  font-size: 40px;
+  color: #3e2723;
+}
+
+.registrasi .input-group {
+  position: relative;
+  width: 100%;
+  margin-bottom: 25px;
+}
+
+.registrasi .input-group input {
+  height: 50px;
+  width: 100%;
+  padding: 0 20px;
+  box-sizing: border-box;
+  font-size: 10px;
+  border: 3px solid #3e2723;
+  border-radius: 10px;
+}
+
+.registrasi .input-group label {
+  position: absolute;
+  top: 12px;
+  left: 20px;
+  padding: 0px;
+  text-transform: capitalize;
+  background-color: #fff;
+  transition: 0.5s;
+  font-family: Kaushan Script;
+  font-size: 20px;
+}
+
+.registrasi .input-group input{
+  font-size: 18px;
+  font-family: Libre Baskerville;
+}
+
+.registrasi .input-group input:focus~label,
+.registrasi .input-group input:valid~label {
+  top: -15px;
+  left: 20px;
+  font-size: 15px;
+  background-color: #bcaaa4;
+  padding: 2px 6px;
+  border: 1px solid #3e2723;
+  border-radius: 5px;
+}
+
+.registrasi .input-group input[type="submit"] {
+  background-color: #bcaaa4;
+  border: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  cursor: pointer;
+  width: 35%;
+  transition: 0.5s;
+  font-size: 15px;
+  font-family: Libre Baskerville;
+}
+
+.registrasi .input-group input[type="submit"]:hover {
+  width: 100%;
+  background-color: rgba(51,0,0, 0.8);
+  color: #fff;
+}
+
+.registrasi button {
+  background-color: #3e2723;
+  border: none;
+  border-radius: 10%;
+  text-transform: uppercase;
+  font-weight: bold;
+  width: 100px;
+  height: 45px;
+  padding: 5px;
+  
+}
+
+.registrasi button a{
+  font-size: 15px;
+  font-family: Libre Baskerville;
+  color: white;
+  text-decoration: none;
 }
